Fix logo bumping out of view (fixes #65)

--- a/www-root/content/css/decred.css
+++ b/www-root/content/css/decred.css
@@ -2611,7 +2611,7 @@ html[lang="ar"] .section-title-download-page {
       cursor: pointer;
       cursor: hand;
     }
-    @media (min-width: 992px) and (max-width: 1024px) {
+    @media (min-width: 992px) and (max-width: 1230px) {
       .front {
         width: 480px;
       }
